# RathausFeed

./: README.md  asset-manifest.json  index.html  manifest.json
Backend/: .env  .gitignore  package.json  tsconfig.json
Backend/src/: app.ts  server.ts
Backend/src/Scraper/: scraperRIS.py  scraper_umschau.py
Backend/src/controllers/: postController.ts  summaryController.ts
Backend/src/db/: db.ts
Backend/src/routes/: summaryRoutes.ts
Backend/src/scripts/: exportContents.ts
Backend/src/services/: postService.ts  summaryService.ts
Backend/src/utils/: formatPostForFrontend.ts
Frontend/rathaus-feed/: package-lock.json  package.json
Frontend/rathaus-feed/public/: index.html
Frontend/rathaus-feed/src/: App.css  App.js  content.json
Frontend/rathaus-feed/src/article/: ArticleView.js  article.css
Frontend/rathaus-feed/src/components/: PhoneFrame.js
Frontend/rathaus-feed/src/feed/: feed.css  feed.js
Frontend/rathaus-feed/src/hooks/: useArticleSelection.js
Frontend/rathaus-feed/src/utils/: publicPath.js  tagColors.js
ai_service/: .gitignore  pyproject.toml
ai_service/src/ai_service/: __init__.py  ai_service.py
static/css/: main.b47b6bf8.css  main.b47b6bf8.css.map
static/js/: main.b5f970e4.js  main.b5f970e4.js.map
